--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>IGARA</title></head><body><h1>Bem-vindo à IGARA</h1><script type='module' src='main.jsx'></script></body></html>
+<!DOCTYPE html><html><head><title>IGARA</title><link rel='stylesheet' href='/style.css'></head><body><div id='root'></div><script type='module' src='/main.jsx'></script></body></html>
